# shopping-alert

./: .gitignore  Dockerfile  README.md  base.py  config.yaml  db.py  db_deprecated.py  db_example.ipynb  deprecated_alert.py  deprecated_alerts.py  example.ipynb  example_runway.ipynb  install_prerequisite.sh  item_configs.toml  new_db_test.ipynb  new_example.ipynb  page.html  pyproject.toml  requirements.txt  research.py  run.py  run_deprecated.py  run_runway.py  runway.py  runway_new.py  setup.sh  start_db.sh  terminate_db.sh  test.ipynb  test_runway.ipynb  test_runway_scraper.ipynb  utils.py  zozotown.py  zozotown_deprecated.py
alert/: alerter.py
configs/: db.toml  email.toml  platforms.toml  runway.yaml
data/: postmaster.pid
data/base/1/: 1259  2619  2619_vm  2696  2841  pg_internal.init
data/base/16384/: 1247  1249  1259  16390  16395  16397  16398  16399  16400  16401  2579  2606  2608  2610  2610_fsm  2615  2658  2659  2662  2663  2664  2665  2666  2667  (+10 more)
data/global/: 1260  1262  2671  pg_control  pg_internal.init
data/pg_stat/: pgstat.stat
database/: db.py  sql.py  utils.py
interests/: runway.yaml
runway/: db.py  runway.yaml  scraper.py
scrapers/: __init__.py  base.py  runway.py
shopping_platform/: __init__.py  _platform.py  runway.py  zozotown.py
shopping_platforms/: __init__.py  _platform.py  runway.py  zozotown.py
tests/: test_run.py  test_utils.py
tests/alert/: test_alerter.py
tests/database/: test_db.py  test_sql.py  test_utils.py
tests/shopping_platforms/: test__platform.py  test_runway.py  test_zozotown.py
zozo/: scraper.py
(+1 files in other folders)
