[project]
name = "shopping-alert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "regex>=2026.2.19",
    "requests>=2.32.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
